cleanup php code and split functions, update documentation

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,33 @@
 {
   "name": "woda/wp-two-stage-font-loader",
-  "license": "MIT",
+  "description": "This WordPress plugin provides functions for developers to implement a performant two stage font loading strategy.",
+  "keywords": [
+    "wordpress",
+    "plugin",
+    "performance"
+  ],
+  "license": "GPLv2 or later",
+  "homepage": "https://github.com/wwwoda/wp-plugin-two-stage-fonts-loader",
   "authors": [
     {
+      "name": "Woda",
+      "email": "hello@woda.at",
+      "homepage": "https://www.woda.at"
+    },
+    {
       "name": "David Mondok",
-      "email": "david@woda.at"
+      "email": "david@woda.at",
+    },
+    {
+      "name": "Wolfgang Schäfer",
+      "email": "wolfgang@woda.at",
     }
   ],
+  "type": "wordpress-plugin",
+  "support": {
+    "issues": "https://github.com/wwwoda/wp-plugin-two-stage-fonts-loader/issues",
+    "source": "https://github.com/wwwoda/wp-plugin-two-stage-fonts-loader"
+  },
   "require": {},
   "autoload": {
     "psr-4": {
