add plugin update checker

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
     "issues": "https://github.com/wwwoda/wp-plugin-two-stage-fonts-loader/issues",
     "source": "https://github.com/wwwoda/wp-plugin-two-stage-fonts-loader"
   },
-  "require": {},
+  "require": {
+    "yahnis-elsts/plugin-update-checker": "^4.8"
+  },
   "autoload": {
     "psr-4": {
       "Woda\\WordPress\\TwoStageFontsLoader\\": "src/"
