complete check, ready for 0.1.0

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Woda\\WordPress\\TwoStageFontsLoader\\": "src/"
+      "Woda\\WordPress\\TwoStageFontsLoader\\": "includes/"
     }
   }
 }
