--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,55 @@
-.DS_Store
-phpcs.xml
-phpunit.xml
-Thumbs.db
+### Plugin ###
+assets
+
+# GulpPress Local Config
+gulppress.local.config.ts
+
+### Logs ###
+*.log
+
+### Dotenv ###
+.env
+.env.*
+!.env.example
+
+### Composer ###
+/vendor
+
+### WP-CLI ###
 wp-cli.local.yml
-node_modules/
+
+### Database dumps ###
+db-sync
 *.sql
+
+### Composer ###
+vendor
+
+### Node ###
+.node/
+node_modules/
+npm-debug.log
+.npmrc
+
+### Log files ###
+**/log
+npm-debug.log*
+yarn-error.log*
+
+### Mac OSX + Windows ###
+.DS_Store
+Thumbs.db
+
+### Vim ###
+*.sw[op]
+*.un~
+
+### Editor directory ###
+.idea
+.vscode
+**/.idea
+**/.vscode
+
+### Archives ###
 *.tar.gz
 *.zip
